--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "El Pasillo del Infierno",
   "description": "El Pasillo del Infierno: The revenge of the fridges. El Pasillo del Infierno is a place where you can find the horrors of the fridges",
-  "version": "1.0",
+  "version": "1.1",
   "app": {
     "urls": [
       "*://adrianarroyocalle.github.io/el-pasillo-del-infierno/"
@@ -11,7 +11,7 @@
     }
   },
   "icons": {
-    "128": "icons/tiny.png"
+    "128": "icons/ElPasilloDelInfierno_128.png"
   },
   "offline_enabled" : true,
   "manifest_version" : 2
